objects/AddressValidator__c.object
<CustomObject>
    <fields>
        <fullName>FormatType__c</fullName>
        <label>Format Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Id__c</fullName>
        <label>Login Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchingScope__c</fullName>
        <label>Matching Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rest_URL__c</fullName>
        <label>Rest URL</label>
        <type>Url</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>AddressValidator</label>
</CustomObject>